--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -1,214 +1,101 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="featured">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
-        <div *ngIf="featured.active">
-          <div class="container-fluid">
-            <app-section-title
-              [title]="featured.title"
-              [subTitle]="featured.subTitle"
-              [text]="featured.text"
-            >
-            </app-section-title>
-          </div>
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-12">
-                <app-painting-card
-                  [painting]="featured.painting"
-                  [maxHeight]="featured.maxHeight"
-                >
-                </app-painting-card>
-              </div>
+      <div *ngIf="featured.active">
+        <div class="container-fluid">
+          <app-section-title [title]="featured.title" [subTitle]="featured.subTitle" [text]="featured.text">
+          </app-section-title>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight">
+              </app-painting-card>
             </div>
           </div>
         </div>
-        <!-- Not visible -->
-        <div *ngIf="!featured.active" class="w-100 text-center">
-          <ngb-alert [dismissible]="false" class="mb-0">
-            <strong>Niet</strong> zichtbaar op de website.
-          </ngb-alert>
-        </div>
-      </mat-card>
+      </div>
+      <!-- Not visible -->
+      <div *ngIf="!featured.active" class="w-100 text-center">
+        <ngb-alert [dismissible]="false" class="mb-0">
+          <strong>Niet</strong> zichtbaar op de website.
+        </ngb-alert>
+      </div>
     </div>
   </div>
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
-        <form (ngSubmit)="onSubmit()" #matForm="ngForm">
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-10 d-flex align-items-center">
-              <h4 class="title-underlined">Instellingen</h4>
-            </div>
-            <div
-              class="col-12 col-md-2 d-flex align-items-start justify-content-end"
-            >
-              <button
-                mat-mini-fab
-                type="button"
-                (click)="
-                  featured.active = !featured.active;
-                  featured.active
-                    ? matForm.form.enable()
-                    : matForm.form.disable();
-                  matForm.form.markAsTouched()
-                "
-                [color]="featured.active ? 'accent' : 'primary'"
-                [attr.aria-label]="'Hide component'"
-                [attr.aria-pressed]="featured.active"
-              >
-                <mat-icon>{{
-                  featured.active ? "visibility" : "visibility_off"
-                }}</mat-icon>
-              </button>
-            </div>
+      <form (ngSubmit)="onSubmit()" #matForm="ngForm">
+        <div class="form-group row">
+          <div class="col-sm-12 col-md-10 d-flex align-items-center">
+            <h4 class="title-underlined">Instellingen</h4>
           </div>
+          <div class="col-12 col-md-2 d-flex align-items-start justify-content-end">
+            <button mat-mini-fab type="button"
+              (click)="featured.active = !featured.active; featured.active ? matForm.form.enable() : matForm.form.disable(); matForm.form.markAsTouched()"
+              [color]="featured.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+              [attr.aria-pressed]="featured.active">
+              <mat-icon>{{ featured.active ? "visibility" : "visibility_off" }}</mat-icon>
+            </button>
+          </div>
+        </div>
 
-          <div class="form-group row">
-            <mat-form-field
-              appearance="fill"
-              class="form-field col-sm-12 col-md-6"
-            >
-              <mat-label>Content titel</mat-label>
-              <input
-                matInput
-                type="text"
-                id="contentTitle"
-                placeholder="Titel"
-                name="contentTitle"
-                [(ngModel)]="featured.title"
-                #contentTitleInput="ngModel"
-                required
-              />
-              <mat-hint
-                [hidden]="contentTitleInput.valid || contentTitleInput.pristine"
-                >Titel is verplicht</mat-hint
-              >
-            </mat-form-field>
+        <div class="form-group row">
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content titel</mat-label>
+            <input matInput type="text" id="featuredContentTitle" placeholder="Titel" name="featuredContentTitle"
+              [(ngModel)]="featured.title" #featuredContentTitleInput="ngModel" required />
+            <mat-hint [hidden]="featuredContentTitleInput.valid || featuredContentTitleInput.pristine">Titel is verplicht</mat-hint>
+          </mat-form-field>
 
-            <mat-form-field
-              appearance="fill"
-              class="form-field col-sm-12 col-md-6"
-            >
-              <mat-label>Content subtitel</mat-label>
-              <input
-                matInput
-                type="text"
-                id="contentSubTitle"
-                placeholder="Subtitel"
-                name="contentSubTitle"
-                [(ngModel)]="featured.subTitle"
-                #contentSubTitleInput="ngModel"
-                required
-              />
-              <mat-hint
-                [hidden]="
-                  contentSubTitleInput.valid || contentSubTitleInput.pristine
-                "
-                >Subtitel is verplicht
-              </mat-hint>
-            </mat-form-field>
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content subtitel</mat-label>
+            <input matInput type="text" id="featuredContentSubTitle" placeholder="Subtitel" name="featuredContentSubTitle"
+              [(ngModel)]="featured.subTitle" #featuredContentSubTitleInput="ngModel" required />
+            <mat-hint [hidden]="featuredContentSubTitleInput.valid || featuredContentSubTitleInput.pristine">Subtitel is verplicht
+            </mat-hint>
+          </mat-form-field>
 
-            <mat-form-field appearance="fill" class="form-field col-12">
-              <mat-label>Content text</mat-label>
-              <textarea
-                rows="1"
-                matInput
-                type="text"
-                id="contentText"
-                placeholder="Text"
-                name="contentText"
-                [(ngModel)]="featured.text"
-                #contentTextInput="ngModel"
-                required
-              >
+          <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-label>Content text</mat-label>
+            <textarea rows="1" matInput type="text" id="featuredContentText" placeholder="Text" name="featuredContentText"
+              [(ngModel)]="featured.text" #featuredContentTextInput="ngModel" required>
               </textarea>
-              <mat-hint
-                [hidden]="contentTextInput.valid || contentTextInput.pristine"
-                >Text is verplicht
-              </mat-hint>
-            </mat-form-field>
+            <mat-hint [hidden]="featuredContentTextInput.valid || featuredContentTextInput.pristine">Text is verplicht
+            </mat-hint>
+          </mat-form-field>
 
-            <mat-form-field
-              appearance="fill"
-              class="form-field col-sm-12 col-md-6"
-            >
-              <mat-label>Schilderij</mat-label>
-              <mat-select
-                id="contentPainting"
-                name="contentPainting"
-                [(ngModel)]="featured.paintingId"
-                #contentPaintingInput="ngModel"
-                required
-              >
-                <mat-option
-                  *ngFor="let painting of paintings"
-                  [value]="painting"
-                >
-                  <img
-                    [src]="painting.thumbnail"
-                    alt="thumbnail"
-                    class="img-thumbnail img-dropdown"
-                  />
-                  {{ painting.title }}
-                </mat-option>
-              </mat-select>
-              <mat-hint
-                [hidden]="
-                  contentPaintingInput.valid || contentPaintingInput.pristine
-                "
-                >Schilderij is verplicht
-              </mat-hint>
-            </mat-form-field>
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Schilderij</mat-label>
+            <mat-select id="featuredContentPainting" name="featuredContentPainting" [(ngModel)]="featured.painting"
+              #featuredContentPaintingInput="ngModel" required>
+              <mat-option *ngFor="let painting of paintings" [value]="painting">
+                <img [src]="painting.thumbnail" alt="thumbnail" class="img-thumbnail img-dropdown" />
+                {{ painting.title }}
+              </mat-option>
+            </mat-select>
+            <mat-hint [hidden]="featuredContentPaintingInput.valid || featuredContentPaintingInput.pristine ">Schilderij is verplicht
+            </mat-hint>
+          </mat-form-field>
 
-            <mat-form-field
-              appearance="fill"
-              class="form-field col-sm-12 col-md-6"
-            >
-              <mat-label>Hoogte</mat-label>
-              <input
-                matInput
-                type="text"
-                id="contentHeight"
-                placeholder="Hoogte"
-                name="contentHeight"
-                [(ngModel)]="featured.maxHeight"
-                #contentHeightInput="ngModel"
-                required
-              />
-              <mat-hint
-                [hidden]="
-                  contentHeightInput.valid || contentHeightInput.pristine
-                "
-                >Hoogte is verplicht
-              </mat-hint>
-            </mat-form-field>
-          </div>
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Hoogte</mat-label>
+            <input matInput type="text" id="featuredContentHeight" placeholder="Hoogte" name="featuredContentHeight"
+              [(ngModel)]="featured.maxHeight" #featuredContentHeightInput="ngModel" required />
+            <mat-hint [hidden]="featuredContentHeightInput.valid || featuredContentHeightInput.pristine ">Hoogte is verplicht
+            </mat-hint>
+          </mat-form-field>
+        </div>
 
-          <button
-            mat-flat-button
-            color="accent"
-            type="submit"
-            [disabled]="!matForm.form.touched"
-          >
-            Opslaan
-          </button>
-          <button
-            mat-flat-button
-            color="primary"
-            type="button"
-            class="ml-3"
-            (click)="
-              reset();
-              matForm.form.markAsUntouched();
-              featured.active ? matForm.form.enable() : matForm.form.disable()
-            "
-          >
-            Reset
-          </button>
-        </form>
-      </mat-card>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!matForm.form.touched">
+          Opslaan
+        </button>
+        <button mat-flat-button color="primary" type="button" class="ml-3"
+          (click)="resetForm(); matForm.form.markAsUntouched(); featured.active ? matForm.form.enable() : matForm.form.disable()">
+          Reset
+        </button>
+      </form>
     </div>
   </div>
 </div>
