--- a/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
@@ -1,88 +1,84 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="latestNews">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
-        <div *ngIf="latestNews.active" class="container-fluid">
-          <app-section-title [title]="latestNews.title" [subTitle]="latestNews.subTitle" [text]="latestNews.text"
-            [link]="latestNews.link">
-          </app-section-title>
-          <div class="row">
-            <div class="col-12">
-              <app-latest-news [amount]="latestNews.amount"></app-latest-news>
-            </div>
+      <div *ngIf="latestNews.active" class="container-fluid">
+        <app-section-title [title]="latestNews.title" [subTitle]="latestNews.subTitle" [text]="latestNews.text"
+          [link]="latestNews.link">
+        </app-section-title>
+        <div class="row">
+          <div class="col-12">
+            <app-latest-news [amount]="latestNews.amount"></app-latest-news>
           </div>
         </div>
-        <!-- Not visible -->
-        <div *ngIf="!latestNews.active" class="w-100 text-center">
-          <ngb-alert [dismissible]="false" class="mb-0">
-            <strong>Niet</strong> zichtbaar op de website.
-          </ngb-alert>
-        </div>
-      </mat-card>
+      </div>
+      <!-- Not visible -->
+      <div *ngIf="!latestNews.active" class="w-100 text-center">
+        <ngb-alert [dismissible]="false" class="mb-0">
+          <strong>Niet</strong> zichtbaar op de website.
+        </ngb-alert>
+      </div>
     </div>
   </div>
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
 
-        <form (ngSubmit)="onSubmit()" #matForm="ngForm">
+      <form (ngSubmit)="onSubmit()" #matForm="ngForm">
 
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-10 d-flex align-items-center">
-              <h4 class="title-underlined">Instellingen</h4>
-            </div>
-            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-              <button mat-mini-fab type="button"
-                (click)="latestNews.active = !latestNews.active; latestNews.active ? matForm.form.enable() : matForm.form.disable(); matForm.form.markAsTouched()"
-                [color]="latestNews.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-                [attr.aria-pressed]="latestNews.active">
-                <mat-icon>{{latestNews.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-              </button>
-            </div>
+        <div class="form-group row">
+          <div class="col-sm-12 col-md-10 d-flex align-items-center">
+            <h4 class="title-underlined">Instellingen</h4>
           </div>
-
-          <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content titel</mat-label>
-              <input matInput type="text" id="contentTitle" placeholder="Titel" name="contentTitle"
-                [(ngModel)]="latestNews.title" #contentTitleInput="ngModel" required>
-              <mat-hint [hidden]="contentTitleInput.valid || contentTitleInput.pristine">Titel is
-                verplicht</mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content subtitel</mat-label>
-              <input matInput type="text" id="contentSubTitle" placeholder="Subtitel" name="contentSubTitle"
-                [(ngModel)]="latestNews.subTitle" #contentSubTitleInput="ngModel" required>
-              <mat-hint [hidden]="contentSubTitleInput.valid || contentSubTitleInput.pristine">Subtitel is verplicht
-              </mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="fill" class="form-field col-10">
-              <mat-label>Content text</mat-label>
-              <textarea rows="1" matInput type="text" id="contentText" placeholder="Text" name="contentText"
-                [(ngModel)]="latestNews.text" #contentTextInput="ngModel" required> </textarea>
-              <mat-hint [hidden]="contentTextInput.valid || contentTextInput.pristine">Text is verplicht
-              </mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="fill" class="form-field col-2">
-              <mat-label>Items</mat-label>
-              <input matInput type="number" id="contentAmount" name="contentAmount" min="1" max="6"
-                [(ngModel)]="latestNews.amount" #contentAmountInput="ngModel" required>
-              <mat-hint [hidden]="contentAmountInput.valid || contentAmountInput.pristine">Aantal is verplicht
-              </mat-hint>
-            </mat-form-field>
-
+          <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+            <button mat-mini-fab type="button"
+              (click)="latestNews.active = !latestNews.active; latestNews.active ? matForm.form.enable() : matForm.form.disable(); matForm.form.markAsTouched()"
+              [color]="latestNews.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+              [attr.aria-pressed]="latestNews.active">
+              <mat-icon>{{latestNews.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+            </button>
           </div>
+        </div>
+
+        <div class="form-group row">
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content titel</mat-label>
+            <input matInput type="text" id="latestNewsContentTitle" placeholder="Titel" name="latestNewsContentTitle"
+              [(ngModel)]="latestNews.title" #latestNewsContentTitleInput="ngModel" required>
+            <mat-hint [hidden]="latestNewsContentTitleInput.valid || latestNewsContentTitleInput.pristine">Titel is
+              verplicht</mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content subtitel</mat-label>
+            <input matInput type="text" id="latestNewsContentSubTitle" placeholder="Subtitel" name="latestNewsContentSubTitle"
+              [(ngModel)]="latestNews.subTitle" #latestNewsContentSubTitleInput="ngModel" required>
+            <mat-hint [hidden]="latestNewsContentSubTitleInput.valid || latestNewsContentSubTitleInput.pristine">Subtitel is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-10">
+            <mat-label>Content text</mat-label>
+            <textarea rows="1" matInput type="text" id="latestNewsContentText" placeholder="Text" name="latestNewsContentText"
+              [(ngModel)]="latestNews.text" #latestNewsContentTextInput="ngModel" required> </textarea>
+            <mat-hint [hidden]="latestNewsContentTextInput.valid || latestNewsContentTextInput.pristine">Text is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-2">
+            <mat-label>Items</mat-label>
+            <input matInput type="number" id="latestNewsContentAmount" name="latestNewsContentAmount" min="1" max="6"
+              [(ngModel)]="latestNews.amount" #latestNewsContentAmountInput="ngModel" required>
+            <mat-hint [hidden]="latestNewsContentAmountInput.valid || latestNewsContentAmountInput.pristine">Aantal is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+        </div>
 
 
-          <button mat-flat-button color="accent" type="submit" [disabled]="!matForm.form.touched">Opslaan</button>
-          <button mat-flat-button color="primary" type="button" class="ml-3"
-            (click)="reset(); matForm.form.markAsUntouched();latestNews.active ? matForm.form.enable() : matForm.form.disable();">Reset</button>
-        </form>
-      </mat-card>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!matForm.form.touched">Opslaan</button>
+        <button mat-flat-button color="primary" type="button" class="ml-3"
+          (click)="reset(); matForm.form.markAsUntouched();latestNews.active ? matForm.form.enable() : matForm.form.disable();">Reset</button>
+      </form>
 
     </div>
   </div>
