--- a/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
@@ -1,87 +1,83 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="latestWork">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
-        <div *ngIf="latestWork.active" class="container-fluid">
-          <app-section-title [title]="latestWork.title" [subTitle]="latestWork.subTitle" [text]="latestWork.text"
-            [link]="latestWork.link">
-          </app-section-title>
-          <div class="row">
-            <div class="col-12">
-              <app-latest [amount]="latestWork.amount"></app-latest>
-            </div>
+      <div *ngIf="latestWork.active" class="container-fluid">
+        <app-section-title [title]="latestWork.title" [subTitle]="latestWork.subTitle" [text]="latestWork.text"
+          [link]="latestWork.link">
+        </app-section-title>
+        <div class="row">
+          <div class="col-12">
+            <app-latest [amount]="latestWork.amount"></app-latest>
           </div>
         </div>
-        <!-- Not visible -->
-        <div *ngIf="!latestWork.active" class="w-100 text-center">
-          <ngb-alert [dismissible]="false" class="mb-0">
-            <strong>Niet</strong> zichtbaar op de website.
-          </ngb-alert>
-        </div>
-      </mat-card>
+      </div>
+      <!-- Not visible -->
+      <div *ngIf="!latestWork.active" class="w-100 text-center">
+        <ngb-alert [dismissible]="false" class="mb-0">
+          <strong>Niet</strong> zichtbaar op de website.
+        </ngb-alert>
+      </div>
     </div>
   </div>
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
-        <form (ngSubmit)="onSubmit()" #matForm="ngForm">
+      <form (ngSubmit)="onSubmit()" #matForm="ngForm">
 
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-10 d-flex align-items-center">
-              <h4 class="title-underlined">Instellingen</h4>
-            </div>
-            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-              <button mat-mini-fab type="button"
-                (click)="latestWork.active = !latestWork.active; latestWork.active ? matForm.form.enable() : matForm.form.disable(); matForm.form.markAsTouched()"
-                [color]="latestWork.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-                [attr.aria-pressed]="latestWork.active">
-                <mat-icon>{{latestWork.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-              </button>
-            </div>
+        <div class="form-group row">
+          <div class="col-sm-12 col-md-10 d-flex align-items-center">
+            <h4 class="title-underlined">Instellingen</h4>
           </div>
-
-          <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content titel</mat-label>
-              <input matInput type="text" id="contentTitle" placeholder="Titel" name="contentTitle"
-                [(ngModel)]="latestWork.title" #contentTitleInput="ngModel" required>
-              <mat-hint [hidden]="contentTitleInput.valid || contentTitleInput.pristine">Titel is
-                verplicht</mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content subtitel</mat-label>
-              <input matInput type="text" id="contentSubTitle" placeholder="Subtitel" name="contentSubTitle"
-                [(ngModel)]="latestWork.subTitle" #contentSubTitleInput="ngModel" required>
-              <mat-hint [hidden]="contentSubTitleInput.valid || contentSubTitleInput.pristine">Subtitel is verplicht
-              </mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="fill" class="form-field col-10">
-              <mat-label>Content text</mat-label>
-              <textarea rows="1" matInput type="text" id="contentText" placeholder="Text" name="contentText"
-                [(ngModel)]="latestWork.text" #contentTextInput="ngModel" required> </textarea>
-              <mat-hint [hidden]="contentTextInput.valid || contentTextInput.pristine">Text is verplicht
-              </mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="fill" class="form-field col-2">
-              <mat-label>Items</mat-label>
-              <input matInput type="number" id="contentAmount" name="contentAmount" min="1" max="6"
-                [(ngModel)]="latestWork.amount" #contentAmountInput="ngModel" required>
-              <mat-hint [hidden]="contentAmountInput.valid || contentAmountInput.pristine">Aantal is verplicht
-              </mat-hint>
-            </mat-form-field>
-
+          <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+            <button mat-mini-fab type="button"
+              (click)="latestWork.active = !latestWork.active; latestWork.active ? matForm.form.enable() : matForm.form.disable(); matForm.form.markAsTouched()"
+              [color]="latestWork.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+              [attr.aria-pressed]="latestWork.active">
+              <mat-icon>{{latestWork.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+            </button>
           </div>
+        </div>
+
+        <div class="form-group row">
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content titel</mat-label>
+            <input matInput type="text" id="latestWorkContentTitle" placeholder="Titel" name="latestWorkContentTitle"
+              [(ngModel)]="latestWork.title" #latestWorkContentTitleInput="ngModel" required>
+            <mat-hint [hidden]="latestWorkContentTitleInput.valid || latestWorkContentTitleInput.pristine">Titel is
+              verplicht</mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content subtitel</mat-label>
+            <input matInput type="text" id="latestWorkContentSubTitle" placeholder="Subtitel" name="latestWorkContentSubTitle"
+              [(ngModel)]="latestWork.subTitle" #latestWorkContentSubTitleInput="ngModel" required>
+            <mat-hint [hidden]="latestWorkContentSubTitleInput.valid || latestWorkContentSubTitleInput.pristine">Subtitel is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-10">
+            <mat-label>Content text</mat-label>
+            <textarea rows="1" matInput type="text" id="latestWorkContentText" placeholder="Text" name="latestWorkContentText"
+              [(ngModel)]="latestWork.text" #latestWorkContentTextInput="ngModel" required> </textarea>
+            <mat-hint [hidden]="latestWorkContentTextInput.valid || latestWorkC.pristine">Text is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-2">
+            <mat-label>Items</mat-label>
+            <input matInput type="number" id="latestWorkContentAmount" name="latestWorkContentAmount" min="1" max="6"
+              [(ngModel)]="latestWork.amount" #latestWorkContentAmountInput="ngModel" required>
+            <mat-hint [hidden]="latestWorkContentAmountInput.valid || latestWorkContentAmountInput.pristine">Aantal is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+        </div>
 
 
-          <button mat-flat-button color="accent" type="submit" [disabled]="!matForm.form.touched">Opslaan</button>
-          <button mat-flat-button color="primary" type="button" class="ml-3"
-            (click)="reset(); matForm.form.markAsUntouched();latestWork.active ? matForm.form.enable() : matForm.form.disable();">Reset</button>
-        </form>
-      </mat-card>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!matForm.form.touched">Opslaan</button>
+        <button mat-flat-button color="primary" type="button" class="ml-3"
+          (click)="resetForm(); matForm.form.markAsUntouched();latestWork.active ? matForm.form.enable() : matForm.form.disable();">Reset</button>
+      </form>
 
     </div>
   </div>
