--- a/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
@@ -7,14 +7,29 @@
 
       <form *ngIf="painting" (ngSubmit)="onSubmit()" #addPaintingForm="ngForm">
 
+        <mat-card class="mat-elevation-z4 mb-4">
+          <h4 class="title-underlined">Afbeeldingen</h4>
+
+          <div class="form-group row">
+            <div class="col-12">
+              <ngx-dropzone (change)="onFileSelect($event)" class="mat-dropzone">
+                <ngx-dropzone-label class="d-flex align-items-center">
+                  <mat-icon class="mr-2">upload</mat-icon>
+                  Kies afbeeldingen
+                </ngx-dropzone-label>
+                <ngx-dropzone-image-preview ngProjectAs="ngx-dropzone-preview" *ngFor="let file of selectedFiles"
+                  [file]="file" [removable]="true" (removed)="onFileRemove(file)">
+                  <ngx-dropzone-label>{{ file.name }} ({{ file.type }})</ngx-dropzone-label>
+                </ngx-dropzone-image-preview>
+              </ngx-dropzone>
+            </div>
+          </div>
+        </mat-card>
+
         <!-- General information -->
         <mat-card class="mat-elevation-z4 mb-4">
-          <mat-card-header>
-            <mat-card-title>Details</mat-card-title>
-            <mat-card-subtitle>Voeg algemene informatie over het schilderij toe</mat-card-subtitle>
-          </mat-card-header>
+            <h4 class="title-underlined">Details</h4>
 
-          <mat-card-content>
             <div class="form-group row">
               <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12 col-md-6">
                 <mat-label>Titel</mat-label>
@@ -103,45 +118,15 @@
                   [disabled]="formDisabled" #width="ngModel" />
               </mat-form-field>
             </div>
-          </mat-card-content>
-        </mat-card>
 
-        <!-- Images -->
-        <mat-card class="mat-elevation-z4 mb-4">
-          <mat-card-header>
-            <mat-card-title>Afbeeldingen</mat-card-title>
-            <mat-card-subtitle>Voeg afbeeldingen van het schilderij toe</mat-card-subtitle>
-          </mat-card-header>
-
-          <mat-card-content>
-            <div class="form-group row">
+            <!-- Actions -->
+            <div class="row mt-3">
               <div class="col-12">
-                <ngx-dropzone (change)="onFileSelect($event)" class="mat-dropzone">
-                  <ngx-dropzone-label class="d-flex align-items-center">
-                    <mat-icon class="mr-2">upload</mat-icon>
-                    Kies afbeeldingen
-                  </ngx-dropzone-label>
-                  <ngx-dropzone-image-preview ngProjectAs="ngx-dropzone-preview" *ngFor="let file of selectedFiles"
-                    [file]="file" [removable]="true" (removed)="onFileRemove(file)">
-                    <ngx-dropzone-label>{{ file.name }} ({{ file.type }})</ngx-dropzone-label>
-                  </ngx-dropzone-image-preview>
-                </ngx-dropzone>
+                <button mat-flat-button color="accent" type="submit" class="mr-2"
+                  [disabled]="!addPaintingForm.valid || !this.selectedFiles.length">opslaan</button>
+                <button mat-flat-button color="primary" type="button" (click)="resetForm()">reset</button>
               </div>
             </div>
-          </mat-card-content>
-        </mat-card>
-
-        <!-- Actions -->
-        <mat-card class="mat-elevation-z4">
-          <mat-card-content>
-            <button mat-flat-button color="primary" type="button" class="mr-2" (click)="resetForm()">
-              reset
-            </button>
-            <button mat-flat-button color="accent" type="submit"
-              [disabled]="!addPaintingForm.valid || !this.selectedFiles.length">
-              opslaan
-            </button>
-          </mat-card-content>
         </mat-card>
       </form>
     </div>
