--- a/angular-web-app/src/app/components/featured/featured.component.html
+++ b/angular-web-app/src/app/components/featured/featured.component.html
@@ -1,5 +1,5 @@
 <mat-card id="featured-card" class="">
-  <img src="{{ painting.thumbnail }}" class="featured-img mat-elevation-z4" alt="{{ painting.title }}" />
+  <img [src]="painting.thumbnail" class="featured-img mat-elevation-z4" [alt]="painting.title" />
   <mat-card-content class="p-4 text-center">
     <h2 class="">{{ painting.title }}</h2>
     <h6 class="font-italic mb-3 txt-primary">By {{ painting.artist}}.</h6>
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-12">
           <div class="d-flex align-items-center justify-content-center">
-            <img class="img-modal" src="{{ painting.thumbnail }}" alt="" />
+            <img class="img-modal" [src]="painting.thumbnail" [alt]="painting.title" />
           </div>
         </div>
       </div>
