--- a/angular-web-app/src/app/components/latest/latest.component.html
+++ b/angular-web-app/src/app/components/latest/latest.component.html
@@ -1,10 +1,9 @@
-<ngb-carousel *ngIf="groupedPaintings" #latestCarousel>
-  <ng-template ngbSlide *ngFor="let paintingGroup of groupedPaintings">
+<ngb-carousel *ngIf="paintings" #latestCarousel>
+  <ng-template ngbSlide *ngFor="let painting of paintings">
     <div class="container-fluid">
       <div class="row">
-        <div *ngFor="let painting of paintingGroup" class="col-sm-12 col-md-6 col-lg-4">
-          <app-painting-card [painting]="painting" [maxHeight]="'30vh'">
-          </app-painting-card>
+        <div class="col-12">
+          <app-painting-card [painting]="painting" [maxHeight]="'30vh'"></app-painting-card>
         </div>
       </div>
     </div>
