updated component cms

--- a/angular-web-app/src/app/components/_admin/comp-header/comp-header.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-header/comp-header.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" *ngIf="pageTitle">
   <div class="row mb-4">
     <div class="col-12">
-      <app-header [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [image]="pageTitle.image"></app-header>
+      <app-header [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [image]="pageTitle.image" [elevation]="'mat-elevation-z8'"></app-header>
     </div>
   </div>
 
