--- a/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
+++ b/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
@@ -39,7 +39,7 @@
           <h4 class="title-underlined mb-0 mt-2">Gallerij</h4>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      
+      <app-comp-gallery></app-comp-gallery>
       <mat-action-row>
         <button mat-raised-button color="primary" (click)="prevStep()">Vorige</button>
         <!-- <button mat-raised-button color="accent" (click)="nextStep()">Volgende</button> -->
