--- a/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
@@ -124,7 +124,7 @@
               <div class="col-12">
                 <button mat-flat-button color="accent" type="submit" class="mr-2"
                   [disabled]="!addPaintingForm.valid || !this.selectedFiles.length">opslaan</button>
-                <button mat-flat-button color="primary" type="button" (click)="resetForm()">reset</button>
+                <button mat-flat-button color="primary" type="button" (click)="resetForm(); addPaintingForm.form.markAsUntouched()">reset</button>
               </div>
             </div>
         </mat-card>
