--- a/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
@@ -1,1 +1,113 @@
-<p>comp-contact-form works!</p>
+<div class="container-fluid" *ngIf="content">
+  <div class="row mb-4">
+    <div class="col-12">
+      <mat-card class="mat-elevation-z8">
+        <div *ngIf="content.active">
+          <app-section-title [title]="content.title" [subTitle]="content.subTitle" [text]="content.text">
+          </app-section-title>
+          <div class="row">
+            <div *ngFor="let service of content.content" class="col-lg-4 col-md-6 col-sm-12">
+              <app-service-card [service]="service"></app-service-card>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <app-contact-card [appearance]="content.formStyle" [color]="content.formColor"></app-contact-card>
+            </div>
+          </div>
+        </div>
+        <!-- Not visible -->
+        <div *ngIf="!content.active" class="w-100 text-center">
+          <ngb-alert [dismissible]="false" class="mb-0">
+            <strong>Niet</strong> zichtbaar op de website.
+          </ngb-alert>
+        </div>
+      </mat-card>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col-12">
+
+      <form (ngSubmit)="onSubmit()" #contactFormForm="ngForm">
+
+        <div class="form-group row">
+          <div class="col-sm-12 col-md-10 d-flex align-items-center">
+            <h4 class="title-underlined">Details</h4>
+          </div>
+          <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+            <button mat-mini-fab type="button"
+              (click)="content.active = !content.active; content.active ? contactFormForm.form.enable() : contactFormForm.form.disable(); contactFormForm.form.markAsTouched()"
+              [color]="content.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+              [attr.aria-pressed]="content.active">
+              <mat-icon>{{content.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+            </button>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content titel</mat-label>
+            <input matInput type="text" id="contactFormContentTitle" placeholder="Titel" name="contactFormContentTitle"
+              [(ngModel)]="content.title" #contactFormContentTitleInput="ngModel" required>
+            <mat-hint [hidden]="contactFormContentTitleInput.valid || contactFormContentTitleInput.pristine">
+              Titel is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content subtitel</mat-label>
+            <input matInput type="text" id="contactFormContentSubTitle" placeholder="Subtitel"
+              name="contactFormContentSubTitle" [(ngModel)]="content.subTitle"
+              #contactFormContentSubTitleInput="ngModel" required>
+            <mat-hint [hidden]="contactFormContentSubTitleInput.valid || contactFormContentSubTitleInput.pristine">
+              Subtitel is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-label>Content text</mat-label>
+            <textarea rows="1" matInput type="text" id="contactFormContentText" placeholder="Text"
+              name="contactFormContentText" [(ngModel)]="content.text" #contactFormContentTextInput="ngModel"
+              required> </textarea>
+            <mat-hint [hidden]="contactFormContentTextInput.valid || contactFormContentTextInput.pristine">
+              Text is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Form style</mat-label>
+            <mat-select id="contactFormContentFormStyle" name="contactFormContentFormStyle"
+              [(ngModel)]="content.formStyle" #contactFormContentFormStyleInput="ngModel" required>
+              <mat-option *ngFor="let style of formStyles" [value]="style">
+                {{ style }}
+              </mat-option>
+            </mat-select>
+            <mat-hint [hidden]="contactFormContentFormStyleInput.valid || contactFormContentFormStyleInput.pristine ">
+              Form style is verplicht
+            </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Form kleur</mat-label>
+            <mat-select id="contactFormContentFormColor" name="contactFormContentFormColor"
+              [(ngModel)]="content.formColor" #contactFormContentFormColorInput="ngModel" required>
+              <mat-option value="primary">Primary</mat-option>
+              <mat-option value="accent">Accent</mat-option>
+              <mat-option value="warn">Warn</mat-option>
+            </mat-select>
+            <mat-hint [hidden]="contactFormContentFormColorInput.valid || contactFormContentFormColorInput.pristine ">
+              Form kleur is verplicht
+            </mat-hint>
+          </mat-form-field>
+        </div>
+
+        <button mat-flat-button color="accent" type="submit" [disabled]="!contactFormForm.form.touched">Opslaan</button>
+        <button mat-flat-button color="primary" type="button" class="ml-3"
+          (click)="resetForm(); contactFormForm.form.markAsUntouched();content.active ? contactFormForm.form.enable() : contactFormForm.form.disable();">Reset</button>
+      </form>
+
+    </div>
+  </div>
+
+</div>
