--- a/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid" *ngIf="cta">
   <div class="row mb-4">
     <div class="col-12">
+      <mat-card class="mat-elevation-z8 p-0">
         <div *ngIf="cta.active" class="container-fluid p-5" [style.backgroundImage]="'url(' + cta.image + ')'">
           <div class="col-12">
             <app-call-to-action [title]="cta.title" [subTitle]="cta.subTitle" [buttonText]="cta.btnText"
@@ -14,87 +15,88 @@
             <strong>Niet</strong> zichtbaar op de website.
           </ngb-alert>
         </div>
+      </mat-card>
     </div>
   </div>
 
   <div class="row mb-4">
     <div class="col-12">
 
-        <form (ngSubmit)="onSubmit()" #matForm="ngForm">
+      <form (ngSubmit)="onSubmit()" #ctaForm="ngForm">
 
-          <div class="form-group row">
-            <div class="col-sm-12 col-md-10 d-flex align-items-center">
-              <h4 class="title-underlined">Details</h4>
-            </div>
-            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-              <button mat-mini-fab type="button"
-                (click)="cta.active = !cta.active; cta.active ? matForm.form.enable() : matForm.form.disable(); matForm.form.markAsTouched()"
-                [color]="cta.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-                [attr.aria-pressed]="cta.active">
-                <mat-icon>{{cta.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-              </button>
-            </div>
+        <div class="form-group row">
+          <div class="col-sm-12 col-md-10 d-flex align-items-center">
+            <h4 class="title-underlined">Details</h4>
           </div>
-
-          <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content titel</mat-label>
-              <input matInput type="text" id="ctaContentTitle" placeholder="Titel" name="ctaContentTitle"
-                [(ngModel)]="cta.title" #ctaContentTitleInput="ngModel" required>
-              <mat-hint [hidden]="ctaContentTitleInput.valid || ctaContentTitleInput.pristine">Titel is
-                verplicht</mat-hint>
-            </mat-form-field>
-            <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
-              <mat-label>Content subtitel</mat-label>
-              <input matInput type="text" id="ctaContentSubTitle" placeholder="Subtitel" name="ctaContentSubTitle"
-                [(ngModel)]="cta.subTitle" #ctaContentSubTitleInput="ngModel" required>
-              <mat-hint [hidden]="ctaContentSubTitleInput.valid || ctaContentSubTitleInput.pristine">Subtitel is verplicht
-              </mat-hint>
-            </mat-form-field>
+          <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+            <button mat-mini-fab type="button"
+              (click)="cta.active = !cta.active; cta.active ? ctaForm.form.enable() : ctaForm.form.disable(); ctaForm.form.markAsTouched()"
+              [color]="cta.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+              [attr.aria-pressed]="cta.active">
+              <mat-icon>{{cta.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+            </button>
           </div>
+        </div>
 
-          <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-12">
-              <mat-label>Achtergrond</mat-label>
-              <mat-select id="ctaContentImage" name="ctaContentImage" [(ngModel)]="cta.image">
-                <mat-option [value]="backgrounds[0]">
-                  <img [src]="backgrounds[0]" alt="thumbnail" class="img-thumbnail img-dropdown" />
-                  Blauw
-                </mat-option>
-                <mat-option [value]="backgrounds[1]">
-                  <img [src]="backgrounds[1]" alt="thumbnail" class="img-thumbnail img-dropdown" />
-                  Licht
-                </mat-option>
-                <mat-option [value]="backgrounds[2]">
-                  <img [src]="backgrounds[2]" alt="thumbnail" class="img-thumbnail img-dropdown" />
-                  Donker
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
+        <div class="form-group row">
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content titel</mat-label>
+            <input matInput type="text" id="ctaContentTitle" placeholder="Titel" name="ctaContentTitle"
+              [(ngModel)]="cta.title" #ctaContentTitleInput="ngModel" required>
+            <mat-hint [hidden]="ctaContentTitleInput.valid || ctaContentTitleInput.pristine">Titel is
+              verplicht</mat-hint>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+            <mat-label>Content subtitel</mat-label>
+            <input matInput type="text" id="ctaContentSubTitle" placeholder="Subtitel" name="ctaContentSubTitle"
+              [(ngModel)]="cta.subTitle" #ctaContentSubTitleInput="ngModel" required>
+            <mat-hint [hidden]="ctaContentSubTitleInput.valid || ctaContentSubTitleInput.pristine">Subtitel is verplicht
+            </mat-hint>
+          </mat-form-field>
+        </div>
 
-          <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-xs-12 col-sm-6">
-              <mat-label>Knop label</mat-label>
-              <input matInput type="text" id="ctaContentBtnLabel" placeholder="Label" name="ctaContentBtnLabel"
-                [(ngModel)]="cta.btnText" #ctaContentBtnLabelInput="ngModel" required>
-              <mat-hint [hidden]="ctaContentBtnLabelInput.valid || ctaContentBtnLabelInput.pristine">Label is verplicht
-              </mat-hint>
-            </mat-form-field>
-            <mat-form-field appearance="fill" class="form-field col-xs-12 col-sm-6">
-              <mat-label>Knop link</mat-label>
-              <input matInput type="text" id="ctaContentBtnLink" placeholder="Link" name="ctaContentBtnLink"
-                [(ngModel)]="cta.btnLink" #ctaContentBtnLinkInput="ngModel" required>
-              <mat-hint [hidden]="ctaContentBtnLinkInput.valid || ctaContentBtnLinkInput.pristine">Link is verplicht
-              </mat-hint>
-            </mat-form-field>
-          </div>
+        <div class="form-group row">
+          <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-label>Achtergrond</mat-label>
+            <mat-select id="ctaContentImage" name="ctaContentImage" [(ngModel)]="cta.image">
+              <mat-option [value]="backgrounds[0]">
+                <img [src]="backgrounds[0]" alt="thumbnail" class="img-thumbnail img-dropdown" />
+                Blauw
+              </mat-option>
+              <mat-option [value]="backgrounds[1]">
+                <img [src]="backgrounds[1]" alt="thumbnail" class="img-thumbnail img-dropdown" />
+                Licht
+              </mat-option>
+              <mat-option [value]="backgrounds[2]">
+                <img [src]="backgrounds[2]" alt="thumbnail" class="img-thumbnail img-dropdown" />
+                Donker
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="form-group row">
+          <mat-form-field appearance="fill" class="form-field col-xs-12 col-sm-6">
+            <mat-label>Knop label</mat-label>
+            <input matInput type="text" id="ctaContentBtnLabel" placeholder="Label" name="ctaContentBtnLabel"
+              [(ngModel)]="cta.btnText" #ctaContentBtnLabelInput="ngModel" required>
+            <mat-hint [hidden]="ctaContentBtnLabelInput.valid || ctaContentBtnLabelInput.pristine">Label is verplicht
+            </mat-hint>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="form-field col-xs-12 col-sm-6">
+            <mat-label>Knop link</mat-label>
+            <input matInput type="text" id="ctaContentBtnLink" placeholder="Link" name="ctaContentBtnLink"
+              [(ngModel)]="cta.btnLink" #ctaContentBtnLinkInput="ngModel" required>
+            <mat-hint [hidden]="ctaContentBtnLinkInput.valid || ctaContentBtnLinkInput.pristine">Link is verplicht
+            </mat-hint>
+          </mat-form-field>
+        </div>
 
 
-          <button mat-flat-button color="accent" type="submit" [disabled]="!matForm.form.touched">Opslaan</button>
-          <button mat-flat-button color="primary" type="button" class="ml-3"
-            (click)="resetForm(); matForm.form.markAsUntouched();cta.active ? matForm.form.enable() : matForm.form.disable();">Reset</button>
-        </form>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!ctaForm.form.touched">Opslaan</button>
+        <button mat-flat-button color="primary" type="button" class="ml-3"
+          (click)="resetForm(); ctaForm.form.markAsUntouched();cta.active ? ctaForm.form.enable() : ctaForm.form.disable();">Reset</button>
+      </form>
 
     </div>
   </div>
