--- a/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
@@ -1,28 +1,30 @@
 <div class="container-fluid" *ngIf="latestWork">
   <div class="row mb-4">
     <div class="col-12">
-      <div *ngIf="latestWork.active" class="container-fluid">
-        <app-section-title [title]="latestWork.title" [subTitle]="latestWork.subTitle" [text]="latestWork.text"
-          [link]="latestWork.link">
-        </app-section-title>
-        <div class="row">
-          <div class="col-12">
-            <app-latest [amount]="latestWork.amount"></app-latest>
+      <mat-card class="mat-elevation-z8">
+        <div *ngIf="latestWork.active" class="container-fluid">
+          <app-section-title [title]="latestWork.title" [subTitle]="latestWork.subTitle" [text]="latestWork.text"
+            [link]="latestWork.link">
+          </app-section-title>
+          <div class="row">
+            <div class="col-12">
+              <app-latest [amount]="latestWork.amount"></app-latest>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- Not visible -->
-      <div *ngIf="!latestWork.active" class="w-100 text-center">
-        <ngb-alert [dismissible]="false" class="mb-0">
-          <strong>Niet</strong> zichtbaar op de website.
-        </ngb-alert>
-      </div>
+        <!-- Not visible -->
+        <div *ngIf="!latestWork.active" class="w-100 text-center">
+          <ngb-alert [dismissible]="false" class="mb-0">
+            <strong>Niet</strong> zichtbaar op de website.
+          </ngb-alert>
+        </div>
+      </mat-card>
     </div>
   </div>
 
   <div class="row mb-4">
     <div class="col-12">
-      <form (ngSubmit)="onSubmit()" #matForm="ngForm">
+      <form (ngSubmit)="onSubmit()" #latestWorkForm="ngForm">
 
         <div class="form-group row">
           <div class="col-sm-12 col-md-10 d-flex align-items-center">
@@ -30,7 +32,7 @@
           </div>
           <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
             <button mat-mini-fab type="button"
-              (click)="latestWork.active = !latestWork.active; latestWork.active ? matForm.form.enable() : matForm.form.disable(); matForm.form.markAsTouched()"
+              (click)="latestWork.active = !latestWork.active; latestWork.active ? latestWorkForm.form.enable() : latestWorkForm.form.disable(); latestWorkForm.form.markAsTouched()"
               [color]="latestWork.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
               [attr.aria-pressed]="latestWork.active">
               <mat-icon>{{latestWork.active ? 'visibility' : 'visibility_off'}}</mat-icon>
@@ -49,16 +51,19 @@
 
           <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
             <mat-label>Content subtitel</mat-label>
-            <input matInput type="text" id="latestWorkContentSubTitle" placeholder="Subtitel" name="latestWorkContentSubTitle"
-              [(ngModel)]="latestWork.subTitle" #latestWorkContentSubTitleInput="ngModel" required>
-            <mat-hint [hidden]="latestWorkContentSubTitleInput.valid || latestWorkContentSubTitleInput.pristine">Subtitel is verplicht
+            <input matInput type="text" id="latestWorkContentSubTitle" placeholder="Subtitel"
+              name="latestWorkContentSubTitle" [(ngModel)]="latestWork.subTitle"
+              #latestWorkContentSubTitleInput="ngModel" required>
+            <mat-hint [hidden]="latestWorkContentSubTitleInput.valid || latestWorkContentSubTitleInput.pristine">
+              Subtitel is verplicht
             </mat-hint>
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="form-field col-10">
             <mat-label>Content text</mat-label>
-            <textarea rows="1" matInput type="text" id="latestWorkContentText" placeholder="Text" name="latestWorkContentText"
-              [(ngModel)]="latestWork.text" #latestWorkContentTextInput="ngModel" required> </textarea>
+            <textarea rows="1" matInput type="text" id="latestWorkContentText" placeholder="Text"
+              name="latestWorkContentText" [(ngModel)]="latestWork.text" #latestWorkContentTextInput="ngModel"
+              required> </textarea>
             <mat-hint [hidden]="latestWorkContentTextInput.valid || latestWorkC.pristine">Text is verplicht
             </mat-hint>
           </mat-form-field>
@@ -67,16 +72,17 @@
             <mat-label>Items</mat-label>
             <input matInput type="number" id="latestWorkContentAmount" name="latestWorkContentAmount" min="1" max="6"
               [(ngModel)]="latestWork.amount" #latestWorkContentAmountInput="ngModel" required>
-            <mat-hint [hidden]="latestWorkContentAmountInput.valid || latestWorkContentAmountInput.pristine">Aantal is verplicht
+            <mat-hint [hidden]="latestWorkContentAmountInput.valid || latestWorkContentAmountInput.pristine">Aantal is
+              verplicht
             </mat-hint>
           </mat-form-field>
 
         </div>
 
 
-        <button mat-flat-button color="accent" type="submit" [disabled]="!matForm.form.touched">Opslaan</button>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!latestWorkForm.form.touched">Opslaan</button>
         <button mat-flat-button color="primary" type="button" class="ml-3"
-          (click)="resetForm(); matForm.form.markAsUntouched();latestWork.active ? matForm.form.enable() : matForm.form.disable();">Reset</button>
+          (click)="resetForm(); latestWorkForm.form.markAsUntouched();latestWork.active ? latestWorkForm.form.enable() : latestWorkForm.form.disable();">Reset</button>
       </form>
 
     </div>
