--- a/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
+++ b/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
@@ -24,7 +24,7 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <div class="container-fluid">
+      <div class="container-fluid" *ngIf="pageContent">
         <div class="row mb-4">
           <div class="col-12">
             <mat-card class="mat-elevation-z4">
@@ -54,9 +54,8 @@
 
         <div class="row mb-4">
           <div class="col-12">
-            <mat-card class="mat-elevation-z4">
               <h4 class="title-underlined">Instellingen</h4>
-              <form (ngSubmit)="onSubmit()" #headerForm="ngForm">
+              <form (ngSubmit)="onSubmit()" #pnfContentForm="ngForm">
 
                 <div class="form-group row">
                   <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
@@ -104,11 +103,9 @@
                 </div>
 
                 <button mat-flat-button color="accent" type="submit"
-                  [disabled]="!headerForm.form.valid || headerForm.form.pristine">Opslaan</button>
-                <button mat-flat-button color="primary" type="button" class="ml-3" (click)="reset()">Reset</button>
+                  [disabled]="!pnfContentForm.form.valid || pnfContentForm.form.pristine">Opslaan</button>
+                <button mat-flat-button color="primary" type="button" class="ml-3" (click)="resetForm()">Reset</button>
               </form>
-            </mat-card>
-
           </div>
         </div>
       </div>
